bxt-macros/tests/ui/missing-second-question.stderr
error: missing second `?`
 --> $DIR/missing-second-question.rs:4:17
  |
4 |     pattern!(00 ? 00);
  |                 ^
