bxt-macros/tests/ui/missing-second-question.rs
use bxt_macros::pattern;

fn main() {
    pattern!(00 ? 00);
}
